class concepts cleared

--- a/4.project2/index.html
+++ b/4.project2/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <body>
+      <header class="main-header">
+        <div>
+          <h1>Nithin Kumar</h1>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Hire Me</a></li>
+            <li><a href="#">Resume</a></li>
+          </ul>
+        </nav>
+      </header>
       <section id="intro">
         <p class="name">My Name is <span>Nithin Kumar</span></p>
         <div class="profile">
@@ -32,8 +44,10 @@
       </section>
 
       <section id="hire">
-        <h2>Hire me</h2>
-        <p>I am always eager to learn and get my hand dirty</p>
+        <div class="container">
+          <h2>Hire me</h2>
+          <p>I am always eager to learn and get my hand dirty</p>
+        </div>
       </section>
 
       <hr />
